[package]
name = "erbauer"
version = "0.1.0"
edition = "2018"

[workspace]
members = [
    "erbauer-proc",
]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erbauer-proc = { path = "./erbauer-proc" }
once_cell = "1"
derive-new = "0.5"
