[package]
name = "erbauer-proc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1", features = [ "full" ] }
quote = "1"
derive-syn-parse = "0.1.5"
inventory = "0.1"

[lib]
proc-macro = true

